# xgi

./: .gitattributes  .gitignore  .isort.cfg  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  HOW_TO_CONTRIBUTE.md  In Depth 2 - Drawing hyperedges.ipynb  LICENSE  LICENSE.md  MANIFEST.in  OTHER_RESOURCES.md  README.md  README.rst  SUPPORT.md  asv.conf.json  benchmark.ipynb  build_docs.sh  codecov.yml  convex_hull_drawing_example.ipynb  license.md  license.rst  long_description.rst  pyproject.toml  pytest.ini  setup.py  test.ipynb  tox.ini
.github/workflows/: benchmark.yml  benchmarks.yml  check-urls.yml  coverage.yml  notebooks.yml  publish_xgi.yml  run-tox.yml  test-code.yml  test-tutorials.yml  test.yml
.ipynb_checkpoints/: test-checkpoint.ipynb
benchmarks/: README.md  algorithms.py  asv.conf.json  bench.py  benchmark.ipynb  core.py  email-enron.json  generative.py  generators.py  hypernetx.ipynb  networkx.ipynb  output.json  releasehashes.txt  simplehypergraphs.ipynb
benchmarks/benchmarks/: __init__.py  bench_core_hypergraph.py  common.py
data/: disGene.txt
dev/bench/: data.js
docs/: Makefile  make.bat
docs/source/: about.rst  api_reference.rst  conf.py  contribute.rst  contributors.rst  core.rst  gallery.rst  higher-order.rst  index.rst  installing.rst  installing_more.rst  papers.rst  reference.rst  sg_execution_times.rst  stats_cheatsheet.rst  user_guides.rst  using-xgi.rst  xgi-data.rst
examples/: GALLERY_HEADER.txt
examples/advanced/: README.txt  plot_clustering.py  plot_colormaps_colorbars.py  plot_labels.py
examples/basic/: README.txt  plot_simple_hypergraph.py  plot_simple_hypergraph_hull.py  plot_simple_hypergraph_multilayer.py  plot_simple_hypergraph_outline.py  plot_simple_simplicial_complex.py
examples/layouts/: README.txt  plot_barycenter_spring_layout.py  plot_simple_graph.py  plot_spiral_layout.py  plot_triangular_lattice.py
examples/stats/: README.txt  plot_color_stat.py
hypergraph/: __init__.py  convert.py  exception.py  metadata.py
hypergraph.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hypergraph/algorithms/: __init__.py  connected.py
hypergraph/classes/: __init__.py  entity.py  fast_hypergraph.py  function.py  hypergraph.py  hypergraph_dict.py  hypergraphviews.py  object_hypergraph.py  reportviews.py
hypergraph/generators/: __init__.py  classic.py  nonuniform.py  uniform.py
hypergraph/linalg/: __init__.py  matrix.py
hypergraph/readwrite/: __init__.py  bipartite.py  edgelist.py  incidence_matrix.py  json.py
hypergraph/utils/: __init__.py  utilities.py
json/: json specs.txt
paper/: LICENSE  paper.md  references.bib
paper/Figures/: data.json  figures.ipynb  pos.json
requirements/: README.md  benchmark.txt  benchmarks.txt  default.txt  developer.txt  doc.txt  docs.txt  documentation.txt  release.txt  test.txt  tutorial.txt
tests/: conftest.py  test_convert.py  test_import_time.py  test_notebooks.py
tests/algorithms/: test_assortativity.py  test_centrality.py  test_clustering.py  test_connected.py  test_properties.py  test_shortest_path.py  test_simpliciality.py
tests/classes/: test_dihypergraph.py  test_directed_reportviews.py  test_function.py  test_hypergraph.py  test_hypergraphviews.py  test_iddict.py  test_reportviews.py  test_simplicialcomplex.py
tests/commdetect/: test_spectral.py
tests/communities/: test_spectral.py
tests/convert/: test_bipartite_edges.py  test_bipartite_graph.py  test_encapsulation_dag.py  test_graph.py  test_hif_dict.py  test_higher_order_network.py  test_hyperedges.py  test_hypergraph_dict.py  test_incidence.py  test_k_skeleton.py  test_line_graph.py  test_pandas.py
tests/core/: test_dihypergraph.py  test_diviews.py  test_function.py  test_globalviews.py  test_hypergraph.py  test_hypergraphviews.py  test_simplicialcomplex.py  test_views.py
tests/drawing/: test_draw.py  test_draw_utils.py  test_layout.py  test_xgi_pylab.py
tests/dynamics/: test_synchronization.py
tests/generators/: test_classic.py  test_iterative.py  test_lattice.py  test_nonuniform.py  test_random.py  test_randomizing.py  test_simple.py  test_simplicial_complexes.py  test_uniform.py
tests/linalg/: test_matrix.py
tests/readwrite/: test_bigg_data.py  test_bipartite_edgelist.py  test_edgelist.py  test_hif.py  test_hypergraph_json.py  test_incidence_matrix.py  test_json.py  test_load_xgi_data.py  test_xgi_data.py
tests/stats/: test_core_stats_functions.py  test_diedgestats.py  test_dinodestats.py  test_edgestats.py  test_nodestats.py
tests/utils/: test_utilities.py  test_utils.py
tools/: generate_changelog.py  generate_requirements.py  profile_imports.py
tutorials/: In Depth 1 - Drawing nodes.ipynb  In Depth 2 - Drawing hyperedges.ipynb  README.md  Tutorial 1 - Basic Hypergraph Functionality.ipynb  Tutorial 1 - Basic Hypergraph Functionality.md  Tutorial 2 - Read and Write.ipynb  Tutorial 2 - Read and Write.md  Tutorial 3 - Basic simplicial complex usage.ipynb  Tutorial 3 - Generative_Models.ipynb  Tutorial 3 - Generative_Models.md  Tutorial 4 - Generative_Models.ipynb  Tutorial 5 - Plotting.ipynb  Tutorial 6 - Statistics.ipynb  Tutorial 7 - Convex hulls hypergraph plotting.ipynb  Tutorial 8 - Directed Hypergraphs.ipynb  XGI in 1 minute.ipynb  XGI in 15 minutes.ipynb  XGI in 5 minutes.ipynb  case_study_zhang2022.ipynb  convex_hull_drawing_example.ipynb  quickstart.ipynb  simplicial_kuramoto_example.ipynb  test.ipynb  test.json
tutorials/case_studies/: case_study_zhang2022.ipynb  comparing_centralities.ipynb  simplicial_kuramoto_example.ipynb
tutorials/cookbook/: Recipes Max.ipynb  Recipes Thomas.ipynb  merging_multiedges.ipynb  recipes_nwl.ipynb
tutorials/focus/: Tutorial 2 - Read and Write.ipynb  Tutorial 3 - Basic simplicial complex usage.ipynb  Tutorial 5 - Plotting.ipynb  Tutorial 6 - Statistics.ipynb  Tutorial 7 - Directed Hypergraphs.ipynb  bipartite_edge_list.csv
tutorials/getting_started/: XGI in 1 minute.ipynb  (+3 more)
xgi/: __init__.py  convert.py  exception.py  line_graphs.py  metadata.py
(+381 files in other folders)
