[build-system]
requires = ["setuptools>=73", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xgi"
dynamic = ["version"]
description = "XGI is a Python package for higher-order networks."
readme = "README.rst"
requires-python = ">=3.8"
license = {text = "3-Clause BSD license"}
authors = [
    {name = "XGI Developers", email = "nicholas.landry@virginia.edu"}
]
keywords = ["networks", "higher-order", "XGI"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.8",
    "pandas>=1.3",
    "networkx>=2.7",
    "requests>=2.0",
    "matplotlib>=3.4",
    "seaborn>=0.10",
]

[project.urls]
Documentation = "https://xgi.readthedocs.io/en/stable/"
"Bug Reports" = "https://github.com/xgi-org/xgi/issues"
Source = "https://github.com/xgi-org/xgi"
PyPI = "https://pypi.org/project/xgi/"
"GitHub Discussions" = "https://github.com/xgi-org/xgi/discussions"

[project.optional-dependencies]
benchmark = [
    "hypernetx>=1.0",
    "asv>=0.5",
]
developer = [
    "black[jupyter]>=24.3",
    "pre-commit>=2.12",
    "isort==5.10.1",
    "pylint>=3.0",
    "nbqa",
]
doc = [
    "sphinx~=6.0",
    "sphinx_copybutton",
    "sphinx-rtd-theme>=1.2",
    "numpydoc>=1.1",
    "pillow>=8.2",
    "matplotlib>=3.3",
    "sphinx-design",
    "ipykernel",
    "nbsphinx",
    "nbsphinx-link",
]
release = [
    "twine>=3.4",
    "wheel>=0.36",
    "github-changelog",
]
test = [
    "pytest>=7.2",
    "pytest-cov>=4.0",
]
tutorial = [
    "jupyter>=1.0",
    "ipython<=8.12.0",
]
all = ["xgi[benchmark,developer,docs,release,test,tutorial]"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic.version]
attr = "xgi.__version__"
